--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@types/jest": "^25.2.1",
-    "jest": "^26.0.0",
-    "microbundle": "^0.12.0-next.9",
-    "semantic-release": "^17.0.7"
+    "@types/jest": "^26.0.22",
+    "jest": "^26.6.3",
+    "microbundle": "^0.13.0",
+    "semantic-release": "^17.4.2"
   }
 }
