--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "microbundle --no-sourcemap",
     "dev": "microbundle watch --no-sourcemap",
-    "prepare": "npm run build",
+    "prepack": "npm run build",
     "jest": "jest",
     "test": "npm run build && npm run jest"
   },
